Fix padding issue that makes the layout on small screens look terrible

--- a/themes/nord/css/screen.css
+++ b/themes/nord/css/screen.css
@@ -3,7 +3,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 body {
-    padding: 100px;
+    padding-top: 75px;
     color: #ECEFF4;
     background-color: #2E3440;
     font-family: 'Rubik', Helvetica, Arial, sans-serif;
